@@ -6,6 +6,7 @@ x.x:
 - added: Dutch translation
 - changed: layout of the no account linked page
 - fixed: SAML icon now loads correctly
+- fixed: auto generation of username now always makes valid usernames
 
 1.0 (2012-12-27):
 
